# DSAN-6700-Assignment_1

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  ml_app-ci.yml
docs/source/: conf.py  email_system.rst  index.rst  modules.rst
problem3/: .pre-commit-config.yaml  README.html  README.md  conf.py.tmp  index.rst  pyproject.toml
problem3/.github/workflows/: mailer-ci.yml
problem3/_build/doctrees/: environment.pickle  index.doctree
problem3/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
problem3/src/: alert.py
problem4/: README.md  knn_model.pkl  out.json  visualize.py
problem4/ml_app/: inference.py  train.py
problem4/ml_app/tests/: test_ml.py
problem4/tests/: ml-test.py
problem_3/: README.md  pyproject.toml
problem_3/.github/workflows/: mailer-ci.yml
problem_3/src/: mailer.py
source/: conf.py  index.rst
src/email_system/: alert.py
src/ml_app/: inference.py  knn_model.pkl  train.py
src/ml_app/tests/: test_ml.py
