[tool.poetry]
name = "email-alert"
version = "0.1.0"
description = "A package for sending email alerts"
authors = ["Bella's group"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
sphinx-autoapi = "^3.3.1"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
